[package]
name = "Tech120FinalDemo"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = { version = "0.86.1", default-features = false, features = ["calib3d", "features2d", "flann", "imgcodecs"] }
anyhow = "1.0.75"
serde_json = "1.0.108"
reqwest = { version = "0.11.22", features = ["blocking", "serde_json", "json"] }
zip = "0.6.6"
rocket = "0.5.0"
lazy_static = "1.4.0"
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros"] }
bytes = "1.5.0"
google-cloud-storage = "0.14.0"
serde = "1.0.193"
toml = "0.8.8"
base64 = "0.21.5"
flate2 = "1.0.28"
xz2 = "0.1.7"


